--- a/frontend/src/header/style.css
+++ b/frontend/src/header/style.css
@@ -3,12 +3,13 @@
     top: 0;
     left: 0;
     right: 0;
+    width: 100%;
     z-index: 1000;
-    margin-left: 20px;
-    margin-right: 20px;
     background-color: var(--primary-color);
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .menu__button {
